--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>Spring Security Example</title>
+<title>Login</title>
+<link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/login.css" rel="stylesheet">
 </head>
 <body>
-	<div th:if="${param.error}">Invalid username and password.</div>
-	<div th:if="${param.logout}">You have been logged out.</div>
-	<form th:action="@{/login}" method="post">
-		<div>
-			<label> User Name : <input type="text" name="username" />
-			</label>
-		</div>
-		<div>
-			<label> Password: <input type="password" name="password" />
-			</label>
-		</div>
-		<div>
-			<input type="submit" value="Sign In" />
-		</div>
-	</form>
-	<div>
-		<a th:href="@{/register}" >Register</a>
-	</div>
+  <div class="login-page">
+    <div class="form">
+      <div>Live-chat</div>
+      <form class="login-form" th:action="@{/login}" method="post">
+        <input type="text" placeholder="username" name="username"/>
+        <input type="password" placeholder="password" name="password"/>
+        <div th:if="${param.error}">Invalid username and password.</div>
+        <div th:if="${param.logout}">You have been logged out.</div>
+        <button>login</button>
+        <p class="message">
+          Not registered?
+          <a th:href="@{/register}">Create an account</a>
+        </p>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
