--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,25 +2,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <title>Spring Security Example</title>
+<link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/login.css" rel="stylesheet">
 </head>
 <body>
-	<div th:if="${error}">Invalid data.</div>
-	<form th:action="@{/register}" th:object="${registerForm}" method="post">
-		<div>
-			<label> User Name : <input type="text" name="username" />
-			</label>
-		</div>
-		<div>
-			<label> Password: <input type="password" name="password" />
-			</label>
-		</div>
-		<div>
-			<label> Password again: <input type="password" name="confirmPassword" />
-			</label>
-		</div>
-		<div>
-			<input type="submit" value="Sign Up" />
-		</div>
-	</form>
+  <div class="login-page">
+    <div class="form">
+      <div>Live-chat register</div>
+      <form class="login-form" th:action="@{/register}" method="post">
+        <div th:if="${error}">Invalid data.</div>
+        <input type="text" placeholder="username" name="username" />
+        <input type="password" placeholder="password" name="password" />
+        <input type="password" placeholder="password" name="confirmPassword" />
+        <button>create</button>
+      </form>
+      <p class="message">
+        Already registered?
+        <a th:href="@{/login}">Sign In</a>
+      </p>
+    </div>
+  </div>
+
 </body>
 </html>
